fix: overflow de la pagina en moviles

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /* Personalizar scrollbar */
 ::-webkit-scrollbar {
   width: 8px;
